# cowork

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
cowork/: __main__.py  app.py
